[gd_scene load_steps=5 format=3 uid="uid://b8oxyn0vmd8v3"]

[ext_resource type="Theme" uid="uid://dmajl82kqvoml" path="res://demo/assets/themes/main_theme.tres" id="1_ofo67"]
[ext_resource type="Script" path="res://demo/menus/accounts/AccountButton.gd" id="2_yq5fs"]
[ext_resource type="Texture2D" uid="uid://d0x10o21fswlf" path="res://demo/assets/textures/icons/dams4k.png" id="3_fpibb"]
[ext_resource type="Texture2D" uid="uid://c8rodhvy50ntb" path="res://demo/assets/textures/icons/settings.svg" id="4_5e0d4"]

[node name="AccountButton" type="HBoxContainer"]
unique_name_in_owner = true
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -15.5
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_ofo67")
script = ExtResource("2_yq5fs")

[node name="IconButton" type="Button" parent="."]
unique_name_in_owner = true
texture_filter = 1
custom_minimum_size = Vector2i(31, 31)
offset_right = 8.0
offset_bottom = 31.0
icon = ExtResource("3_fpibb")
expand_icon = true

[node name="SelectButton" type="Button" parent="."]
unique_name_in_owner = true
offset_left = 12.0
offset_right = 916.0
offset_bottom = 31.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 4.0
text = "Dams4K"
icon_alignment = 2
expand_icon = true

[node name="EditButton" type="Button" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2i(31, 31)
offset_left = 920.0
offset_right = 1146.0
offset_bottom = 31.0
size_flags_horizontal = 3
text = "Edit"
icon = ExtResource("4_5e0d4")
icon_alignment = 2
expand_icon = true

[node name="Label" type="Label" parent="."]
offset_left = 1150.0
offset_top = 4.0
offset_right = 1151.0
offset_bottom = 27.0
